# ray_tracer

./: .gitignore  Cargo.toml  README  imgui.ini
assets/: blender_cube.glb  cube.glb  license.txt  simple_japanese_tree.glb
shaders/: ray_tracer.wgsl  render.wgsl  shader.wgsl
src/: lib.rs  main.rs
src/core/: camera.rs  context.rs  imgui.rs  mod.rs  ray_tracer.rs  renderer.rs  resource.rs  resources.rs  scene.rs  texture.rs  window.rs
