[package]
name = "ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger= "0.10.0"
log = "0.4.17"
glam = "0.23.0"
mint = "0.5.9"
wgpu = "0.15.1"
imgui = {version = "0.10.0", features = ["docking"]}
imgui-wgpu = "0.22.0"
imgui-winit-support = "0.10.0"
tokio = {version = "1.27.0", features = ["full"]}
anyhow = "1.0.70"
bytemuck = {version = "1.13.1", features = ["derive"]}

